# aml-miner-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  TRAINING_QUICKSTART.md  UV_SETUP.md  docker-compose.yml  pyproject.toml  requirements.txt
alert_scoring/: __init__.py
alert_scoring/api/: __init__.py  database.py  routes.py  schemas.py  server.py
alert_scoring/assessment/: __init__.py
alert_scoring/assessment/features/: __init__.py  feature_selector.py
alert_scoring/assessment/training/: __init__.py  hyperparameter_tuner.py  train_ranker.py  train_scorer.py
alert_scoring/config/: __init__.py  settings.py
alert_scoring/evaluation/: __init__.py
alert_scoring/evaluation/aggregation/: __init__.py  consensus.py  ensemble.py  strategies.py
alert_scoring/evaluation/metrics/: __init__.py
alert_scoring/evaluation/quality/: __init__.py  behavior.py  integrity.py  performance.py  utils.py
alert_scoring/ingestion/: sot_ingestion.py
alert_scoring/storage/: __init__.py  utils.py
alert_scoring/storage/repositories/: __init__.py  alerts_repository.py  base_repository.py  cluster_scores_repository.py  clusters_repository.py  features_repository.py  metadata_repository.py  rankings_repository.py  scores_repository.py
alert_scoring/storage/schema/: alert_rankings.sql  alert_scores.sql  batch_metadata.sql  cluster_scores.sql  raw_alerts.sql  raw_clusters.sql  raw_features.sql
alert_scoring/utils/: __init__.py  data_loader.py
aml_miner/: __init__.py
aml_miner/api/: __init__.py  routes.py  schemas.py  server.py
aml_miner/config/: __init__.py  model_config.yaml  settings.py
aml_miner/features/: __init__.py  feature_builder.py
aml_miner/training/: __init__.py  hyperparameter_tuner.py  train_ranker.py  train_scorer.py
aml_miner/utils/: __init__.py  data_loader.py  determinism.py  validators.py
docs/: api_reference.md  quickstart.md
docs/agent/2025-10-26/claude/breakdown/: IMPLEMENTATION_CHECKLIST.md
docs/agent/2025-10-29/claude/: S3_STRUCTURE_UPDATE.md
docs/agent/2025-10-31/claude/: CLUSTER_SCORER_CONSTANT_PREDICTION_FIX.md
notebooks/: 01_data_exploration.ipynb  02_feature_analysis.ipynb  03_model_training.ipynb  04_hyperparameter_tuning.ipynb  05_model_evaluation.ipynb  06_model_comparison.ipynb  07_feature_importance.ipynb  08_error_analysis.ipynb  README.md  notebook_utils.py
scripts/: add_training_labels.py  download_batch.py  download_batch.sh  download_from_sot.py  init_database.py  process_batch.py  train_models.py  validate_models.py  validate_submission.py
scripts/examples/: example_train.py
trained_models/torus/: alert_scorer_torus_v1.0.0_2025-08-01_2025-08-01_w195d_20251030_103751.txt  alert_scorer_torus_v1.0.0_2025-08-01_2025-08-01_w195d_20251030_103900.json  alert_scorer_torus_v1.0.0_2025-08-01_2025-08-01_w195d_20251030_104024.json
